--- a/index.html
+++ b/index.html
@@ -77,10 +77,9 @@
 
  </b></h4>
            
-            <!-- VSL -->
-<script src="https://fast.wistia.com/player.js" async></script><script src="<script src="https://fast.wistia.com/player.js" async></script><script src="https://fast.wistia.com/embed/keugayoywl.js" async type="module"></script><style>wistia-player[media-id='keugayoywl']:not(:defined) { background: center / contain no-repeat url('https://fast.wistia.com/embed/medias/keugayoywl/swatch'); display: block; filter: blur(5px); padding-top:56.25%; }</style> <wistia-player media-id="keugayoywl" aspect="1.7777777777777777"></wistia-player>            
+                        
             <!-- Headline -->
-             <h5 class="my-4"> Last opportunity… </h5>
+             <h5 class="my-4"> </h5>
             <h3 class="my-4"><b> EXCLUSIVE AND SPECIAL OFFER! </b></h3>
 
 
